// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Rendering renders correctly 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="security--toolbar class security--toolbar__minimized"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar Rendering renders the HTML of the node's subtree 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="security--toolbar class security--toolbar__minimized"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar Rendering renders the panel correctly 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    className="security--toolbar class security--toolbar__minimized"
  >
    <ul
      className="security--toolbar__group"
    >
      <li>
        <IconButton
          aria-controls="security--toolbar--toolbar--menu"
          aria-expanded={true}
          aria-label="Toggle menu"
          className="security--toolbar__button security--toolbar__button--active"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle menu"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={true}
          tooltip={false}
          tooltipDirection="right"
        />
      </li>
    </ul>
  </nav>
  <Transition
    className="security--toolbar"
    component="span"
    timeout={160}
  >
    <div
      aria-label="menu"
      className="security--toolbar__panel"
      id="security--toolbar--toolbar--menu"
      role="navigation"
    >
      <Transition
        className="security--toolbar__content"
        component="span"
        key="menu"
        timeout={160}
      />
      <Transition
        className="security--toolbar__content"
        component="span"
        key="settings"
        timeout={160}
      />
      <Transition
        className="security--toolbar__content"
        component="span"
        key="support"
        timeout={160}
      />
    </div>
  </Transition>
</div>
`;

exports[`Toolbar With renderAddons should click the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should focus the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
        "type": "focus",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should hover the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
        "type": "mouse over",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should render the addon icon tooltip 1`] = `null`;

exports[`Toolbar With renderAddons should render the addon icon tooltip 2`] = `null`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    className="security--toolbar security--toolbar__minimized"
  >
    <ul
      className="security--toolbar__group"
    >
      <li>
        <IconButton
          aria-expanded={false}
          aria-label="Toggle menu"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle menu"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li
        key="example-addon"
      >
        <IconButton
          aria-label="Example addon"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label={null}
          onClick={[MockFunction]}
          onFocus={[MockFunction]}
          onMouseOver={[MockFunction]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="bottom"
        />
      </li>
    </ul>
  </nav>
  <Transition
    className="security--toolbar"
    component="span"
    timeout={160}
  />
</div>
`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 2`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="security--toolbar security--toolbar__minimized"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Example addon"
          class="security--button--icon security--toolbar__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M29,26H3a1,1,0,0,1-1-1V8A1,1,0,0,1,3,7H9.46l1.71-2.55A1,1,0,0,1,12,4h8a1,1,0,0,1,.83.45L22.54,7H29a1,1,0,0,1,1,1V25A1,1,0,0,1,29,26ZM4,24H28V9H22a1,1,0,0,1-.83-.45L19.46,6H12.54L10.83,8.55A1,1,0,0,1,10,9H4Z"
            />
            <path
              d="M16,22a6,6,0,1,1,6-6A6,6,0,0,1,16,22Zm0-10a4,4,0,1,0,4,4A4,4,0,0,0,16,12Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 3`] = `
<button
  aria-label="Example addon"
  class="security--button--icon security--toolbar__button"
  type="button"
>
  <svg
    aria-hidden="true"
    class="security--icon security--toolbar__icon"
    fill="currentColor"
    focusable="false"
    height="20"
    preserveAspectRatio="xMidYMid meet"
    style="will-change:transform"
    viewBox="0 0 32 32"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M29,26H3a1,1,0,0,1-1-1V8A1,1,0,0,1,3,7H9.46l1.71-2.55A1,1,0,0,1,12,4h8a1,1,0,0,1,.83.45L22.54,7H29a1,1,0,0,1,1,1V25A1,1,0,0,1,29,26ZM4,24H28V9H22a1,1,0,0,1-.83-.45L19.46,6H12.54L10.83,8.55A1,1,0,0,1,10,9H4Z"
    />
    <path
      d="M16,22a6,6,0,1,1,6-6A6,6,0,0,1,16,22Zm0-10a4,4,0,1,0,4,4A4,4,0,0,0,16,12Z"
    />
  </svg>
</button>
`;
